--- a/public/customer/css/style.css
+++ b/public/customer/css/style.css
@@ -214,7 +214,7 @@ button {
 .banner_bg_main {
     width: 100%;
     float: left;
-    background-image: url(https://wallpapercave.com/wp/wp8255666.jpg);
+    background-image: url(../images/wp8255666.webp);
     height: auto;
     background-size: 100%;
     background-repeat: no-repeat;
