--- a/public/customer/css/templatemo.css
+++ b/public/customer/css/templatemo.css
@@ -52,15 +52,15 @@ body, ul, li, p, a, label, input, div {
 .logo { font-weight: 500 !important;}
 .text-warning {  color: #ede861 !important;}
 .text-muted { color: #bcbcbc !important;}
-.text-success { color: #ffc107 !important;}
+.text-success { color: #f26522 !important;}
 .text-light { color: #cfd6e1 !important;}
 .bg-dark { background-color: #212934 !important;}
 .bg-light { background-color: #e9eef5 !important;}
 .bg-black { background-color: #1d242d !important;}
-.bg-success { background-color: #ffc107 !important;}
+.bg-success { background-color: #f26522 !important;}
 .btn-success {
-  background-color: #ffc107 !important;
-  border-color: #56ae6c !important;
+  background-color: #f26522 !important;
+  border-color: #f26522 !important;
 }
 .pagination .page-link:hover {color: #000;}
 .pagination .page-link:hover, .pagination .page-link.active {
@@ -117,11 +117,11 @@ body, ul, li, p, a, label, input, div {
 /* Carousel Hero */
 #template-mo-zay-hero-carousel .carousel-indicators li {
   margin-top: -50px;
-  background-color: #ffc107;
+  background-color: #f26522;
 }
 #template-mo-zay-hero-carousel .carousel-control-next i,
 #template-mo-zay-hero-carousel .carousel-control-prev i {
-  color: #ffc107 !important;
+  color: #f26522 !important;
   font-size: 2.8em !important;
 }
 /* Carousel Brand */
